src/objects/SalesExecutive__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>This is city description</description>
        <label>City</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Distributor__c</referenceTo>
        <relationshipLabel>SalesExecutives</relationshipLabel>
        <relationshipName>SalesExecutives</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <label>Landmark</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number_91__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infoEx_Id__c</fullName>
        <description>External Id created by Rabit</description>
        <externalId>true</externalId>
        <label>infoEx_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>SalesExecutive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesExecutive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>